<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bnav_home"
        android:icon="@drawable/home1"
        android:title="@string/home"
        android:iconTint="@color/gray"
        tools:ignore="UnusedAttribute">
    </item>

    <item android:id="@+id/bnav_request_donor"
        android:icon="@drawable/req2"
        android:title="@string/Request"
        android:iconTint="@color/gray"
        tools:ignore="UnusedAttribute">
    </item>

    <item android:id="@+id/bnav_find_donor"
        android:icon="@drawable/find_a_donor1"
        android:title="@string/find_donor"
        android:iconTint="@color/gray"
        tools:ignore="UnusedAttribute">
    </item>

    <item android:id="@+id/bnav_be_a_donor"
        android:icon="@drawable/be_a_donor1"
        android:title="@string/be_a_donor"
        android:iconTint="@color/gray"
        tools:ignore="UnusedAttribute">
    </item>

    <item android:id="@+id/bnav_profile"
        android:icon="@drawable/profile1"
        android:title="@string/profile"
        android:iconTint="@color/gray"
        tools:ignore="UnusedAttribute">
    </item>

</menu>