<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.otp.Otp_Verification_Activity1">

    <ImageButton
        android:id="@+id/btn_opt_previous"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/custom_prebtn"
        android:contentDescription="@string/tood"
        android:src="@drawable/previous_btn" />

    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/todoo"
        android:src="@drawable/send_pic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/otp_verification_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/otptxt"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/opensans_bold"
        android:hint="@string/enter_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/custom_otp_edt"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_extrabold"
            android:text="@string/_92"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/ent_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_extrabold"
            android:hint="@string/_0000000000"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/custom_otp_btns"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

        <ProgressBar
            android:id="@+id/pgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>