<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_request_donor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/request_donor"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tv_blood_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_request_donor"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/select_blood_group"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <GridLayout
            android:id="@+id/gv_blood_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_blood_group"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:columnCount="6"
            android:rowCount="2"
            tools:ignore="UselessLeaf">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Apos"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/A_pos"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Aneg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/A_neg"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Bneg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/B_neg"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Bpos"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/B_pos"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Opos"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/O_pos"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Oneg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/O_neg"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ABneg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/AB_neg"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ABpos"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_bgroups"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/AB_pos"
                android:textColor="@color/black" />
        </GridLayout>

        <TextView
            android:id="@+id/tv_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gv_blood_groups"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/loc"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/tv_loc"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="creditCardExpirationDate"
            android:background="@drawable/custom_edt"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/location"
            android:inputType="text"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />


        <TextView
            android:id="@+id/tv_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_location"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/patient"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_patient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/tv_patient"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="creditCardExpirationDate"
            android:background="@drawable/custom_edt"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/patient_name"
            android:inputType="text"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_patient"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/gender"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <Spinner
            android:id="@+id/spn_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/tv_gender"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/custom_edt"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spn_gender"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/time"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/tv_time"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/custom_edt"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_time"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/date"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/tv_date"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/custom_edt"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reqDonor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/txt_date"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/red"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Request"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>


    <!--    tools:context=".fragments.ExploreDonorFragment"-->