<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.onboarding.Viewpager_type_Activity_01">

    <TextView
        android:id="@+id/txt_donor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/become_donor"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/donor_subtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_donor"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/donor_subtxt"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp" />

    <ImageView
        android:id="@+id/donor_img"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:layout_below="@+id/donor_subtxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:contentDescription="@string/toda"
        android:src="@drawable/bottle_img" />

    <TextView
        android:id="@+id/tv_img_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/donor_img"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/lorem_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_img_txt"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/red"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

</RelativeLayout>
</ScrollView>