<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_bottomsheet">

    <LinearLayout
        android:id="@+id/ll_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/tadoo"
            android:importantForAccessibility="no"
            android:src="@drawable/whatsapp2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/whatsapp"
            android:textColor="@color/gray"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tadoo"
            android:importantForAccessibility="no"
            android:src="@drawable/call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/call"
            android:textColor="@color/gray"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>


</LinearLayout>